book/tests/snapshots/snapshot__run_reference_prql@transforms__select-4.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/select-4.prql
---
WITH table_1 AS (
  SELECT
    first_name AS fname
  FROM
    employees AS e
)
SELECT
  fname
FROM
  table_1
WHERE
  fname = 'Fred'
